--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Revisao de HTML e CSS</h1>
-    <input type="text">
-    <input type="text">
-    <input type="text">
+    <h1 id="title">Revisao de HTML e CSS</h1>
+    <div class="form">
+        <input type="text" placeholder="Nome">
+        <input type="number" placeholder="Idade">
+        <input type="email" placeholder="Email">
+    </div>
     <button>Criar</button>
-    <p>Desenvolvido por Cebola123</p>
+    <p class="rodape">Desenvolvido por Cebola123</p>
 </body>
 </html>
