improving display to organize in columns

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Revisao de HTML e CSS</h1>
+    <h1 id="title">Revisão de HTML e CSS</h1>
     <div class="form">
         <input type="text" placeholder="Nome">
         <input type="number" placeholder="Idade">
         <input type="email" placeholder="Email">
     </div>
-    <button>Criar</button>
+    <button class="ok">Criar</button>
     <p class="rodape">Desenvolvido por Cebola123</p>
 </body>
 </html>
